[gd_scene load_steps=12 format=4 uid="uid://nk5x7q1o7s6o"]

[ext_resource type="Script" path="res://scenes/game_scene.gd" id="1_vq7fn"]
[ext_resource type="PackedScene" uid="uid://dj1jt00igxnaw" path="res://scenes/levels/3-key-tutorial.tscn" id="2_bwo1d"]
[ext_resource type="PackedScene" uid="uid://g6pjxukajeng" path="res://scenes/tilesets/foreground_objects.tscn" id="3_sdg04"]
[ext_resource type="PackedScene" uid="uid://crgam25ce6rku" path="res://scenes/player.tscn" id="4_nd342"]
[ext_resource type="PackedScene" uid="uid://cujo26ds7com5" path="res://scenes/goal/goal_floor.tscn" id="5_xrhoa"]
[ext_resource type="PackedScene" uid="uid://d3q0slgc8gwnr" path="res://scenes/boxes/physics_box.tscn" id="6_dplc0"]
[ext_resource type="Theme" uid="uid://bhr6k16rk2ein" path="res://themes/soulkobond_default_theme.tres" id="6_iln3w"]
[ext_resource type="PackedScene" uid="uid://m56d7cor31ag" path="res://scenes/canvases/win_screen.tscn" id="8_sfuey"]
[ext_resource type="PackedScene" uid="uid://12jd6q2hupeq" path="res://scenes/canvases/undo_hint.tscn" id="9_tiofj"]
[ext_resource type="PackedScene" uid="uid://cbu5uxgq3qac5" path="res://scenes/canvases/mirror_drop_hint.tscn" id="10_n4lp0"]
[ext_resource type="PackedScene" uid="uid://jduxfwufml56" path="res://scenes/canvases/mirror_hold_hint.tscn" id="11_hojcq"]

[node name="Node2D" type="Node2D"]
light_mask = 3
visibility_layer = 3
script = ExtResource("1_vq7fn")
next_stage = ExtResource("2_bwo1d")

[node name="ForegroundTiles" parent="." instance=ExtResource("3_sdg04")]
tile_map_data = PackedByteArray("AAAQAAIAAQAFAAQAAAAQAAEAAQACAAMAAAAPAAIAAQAEAAQAAAAPAAEAAQABAAMAAAAOAAIAAQAEAAQAAAAOAAEAAQABAAMAAAANAAIAAQAEAAQAAAANAAEAAQABAAMAAAAMAAIAAQAEAAQAAAAMAAEAAQAEAAMAAAALAAIAAQADAAQAAAALAAEAAQABAAMAAAAFAAIAAQAEAAQAAAAFAAEAAQABAAMAAAAEAAIAAQAEAAQAAAAEAAEAAQABAAMAAAADAAIAAQABAAQAAAADAAEAAQABAAMAAAACAAIAAQAEAAQAAAACAAEAAQABAAMAAAABAAIAAQAAAAQAAAABAAEAAQAAAAMAAAAQAAcAAQAIAAIAAAAQAAYAAQAFAAEAAAAQAAUAAQAFAAEAAAAQAAQAAQAFAAEAAAAQAAMAAQAIAAAAAAAPAAcAAQAEAAIAAAAPAAYAAQAEAAEAAAAPAAUAAQAHAAEAAAAPAAQAAQAEAAEAAAAPAAMAAQAEAAAAAAAOAAcAAQAEAAIAAAAOAAYAAQAEAAEAAAAOAAUAAQAEAAEAAAAOAAQAAQAHAAEAAAAOAAMAAQAHAAAAAAANAAcAAQAHAAIAAAANAAYAAQAEAAEAAAANAAUAAQAEAAEAAAANAAQAAQAHAAEAAAANAAMAAQAHAAAAAAAMAAcAAQAHAAIAAAAMAAYAAQAHAAEAAAAMAAUAAQAEAAEAAAAMAAQAAQAHAAEAAAAMAAMAAQAHAAAAAAALAAcAAQAEAAIAAAALAAYAAQAKAAMAAAALAAUAAQADAAEAAAALAAQAAQADAAEAAAALAAMAAQADAAAAAAAKAAcAAQAHAAIAAAAKAAYAAQAHAAAAAAAKAAUAAQAFAAQAAAAKAAQAAQAFAAMAAAAJAAcAAQAHAAIAAAAJAAYAAQAHAAAAAAAJAAUAAQABAAQAAAAJAAQAAQABAAMAAAAIAAcAAQAHAAIAAAAIAAYAAQAHAAAAAAAIAAUAAQAEAAQAAAAIAAQAAQAEAAMAAAAHAAcAAQAHAAIAAAAHAAYAAQAEAAAAAAAHAAUAAQABAAQAAAAHAAQAAQABAAMAAAAGAAcAAQAEAAIAAAAGAAYAAQAHAAAAAAAGAAUAAQAAAAQAAAAGAAQAAQAAAAMAAAAFAAcAAQAEAAIAAAAFAAYAAQAJAAEAAAAFAAUAAQAFAAEAAAAFAAQAAQAFAAEAAAAFAAMAAQAIAAAAAAAEAAcAAQAHAAIAAAAEAAYAAQAEAAEAAAAEAAUAAQAEAAEAAAAEAAQAAQAHAAEAAAAEAAMAAQAEAAAAAAADAAcAAQAEAAIAAAADAAYAAQAEAAEAAAADAAUAAQAHAAEAAAADAAQAAQAHAAEAAAADAAMAAQAEAAAAAAACAAcAAQAHAAIAAAACAAYAAQAHAAEAAAACAAUAAQAEAAEAAAACAAQAAQAHAAEAAAACAAMAAQAHAAAAAAABAAcAAQADAAIAAAABAAYAAQAGAAEAAAABAAUAAQADAAEAAAABAAQAAQADAAEAAAABAAMAAQAGAAAAAAAAAAAAAQAAAAAAAAABAAAAAQABAAAAAAACAAAAAQABAAAAAAADAAAAAQABAAAAAAAEAAAAAQABAAAAAAAFAAAAAQABAAAAAAALAAAAAQABAAAAAAAMAAAAAQABAAAAAAANAAAAAQABAAAAAAAOAAAAAQABAAAAAAAPAAAAAQABAAAAAAAQAAAAAQABAAAAAAARAAAAAQACAAAAAAARAAEAAQACAAEAAAARAAIAAQACAAEAAAARAAMAAQACAAEAAAARAAQAAQACAAEAAAARAAUAAQACAAEAAAARAAYAAQACAAEAAAARAAcAAQACAAEAAAAAAAEAAQAAAAEAAAAAAAIAAQAAAAEAAAAAAAMAAQAAAAEAAAAAAAQAAQAAAAEAAAAAAAUAAQAAAAEAAAAAAAYAAQAAAAEAAAAAAAcAAQAAAAEAAAARAAkAAQAFAAMAAAARAAgAAQACAAIAAAAQAAkAAQAEAAMAAAAQAAgAAQABAAIAAAAPAAkAAQAEAAMAAAAPAAgAAQABAAIAAAAOAAkAAQABAAMAAAAOAAgAAQABAAIAAAANAAkAAQABAAMAAAANAAgAAQABAAIAAAAMAAkAAQAEAAMAAAAMAAgAAQABAAIAAAALAAkAAQAEAAMAAAALAAgAAQABAAIAAAAKAAkAAQABAAMAAAAKAAgAAQABAAIAAAAJAAkAAQABAAMAAAAJAAgAAQABAAIAAAAIAAkAAQAEAAMAAAAIAAgAAQABAAIAAAAHAAkAAQAEAAMAAAAHAAgAAQABAAIAAAAGAAkAAQAEAAMAAAAGAAgAAQABAAIAAAAFAAkAAQAEAAMAAAAFAAgAAQABAAIAAAAEAAkAAQAEAAMAAAAEAAgAAQABAAIAAAADAAkAAQABAAMAAAADAAgAAQABAAIAAAACAAkAAQABAAMAAAACAAgAAQABAAIAAAABAAkAAQAEAAMAAAABAAgAAQABAAIAAAAAAAkAAQADAAMAAAAAAAgAAQAAAAIAAAARAAoAAQACAAQAAAAQAAoAAQABAAQAAAAPAAoAAQAEAAQAAAAOAAoAAQABAAQAAAANAAoAAQABAAQAAAAMAAoAAQAEAAQAAAALAAoAAQABAAQAAAAKAAoAAQAEAAQAAAAJAAoAAQAEAAQAAAAIAAoAAQAEAAQAAAAHAAoAAQABAAQAAAAGAAoAAQABAAQAAAAFAAoAAQABAAQAAAAEAAoAAQABAAQAAAADAAoAAQAEAAQAAAACAAoAAQAEAAQAAAABAAoAAQAEAAQAAAAAAAoAAQAAAAQAAAAGAAEAAQACAAEAAAAGAAAAAQACAAAAAAAGAAIAAQACAAEAAAAGAAMAAQAAAAIAAAAHAAMAAQABAAIAAAAIAAMAAQABAAIAAAAJAAMAAQABAAIAAAAKAAMAAQACAAIAAAAKAAIAAQACAAEAAAAKAAEAAQACAAEAAAAKAAAAAQAAAAAAAAA=")

[node name="Player" parent="." instance=ExtResource("4_nd342")]
light_mask = 1
visibility_layer = 1
position = Vector2(160, 352)

[node name="GoalFloor" parent="." instance=ExtResource("5_xrhoa")]
position = Vector2(992, 352)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(576, 328)

[node name="PhysicsBox" parent="." instance=ExtResource("6_dplc0")]
position = Vector2(416, 416)

[node name="PhysicsBox2" parent="." instance=ExtResource("6_dplc0")]
position = Vector2(416, 480)

[node name="TutorialCanvas" type="CanvasLayer" parent="."]

[node name="Label2" type="Label" parent="TutorialCanvas"]
light_mask = 3
visibility_layer = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -448.0
offset_top = -72.0
offset_right = 448.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("6_iln3w")
theme_override_font_sizes/font_size = 48
text = "Crates can be pushed."
horizontal_alignment = 1
vertical_alignment = 1

[node name="WinScreen" parent="." instance=ExtResource("8_sfuey")]

[node name="UndoHint" parent="." instance=ExtResource("9_tiofj")]

[node name="MirrorDropHint" parent="." instance=ExtResource("10_n4lp0")]

[node name="MirrorHoldHint" parent="." instance=ExtResource("11_hojcq")]

[connection signal="win_clicked" from="WinScreen" to="." method="_on_win_screen_win_clicked"]
